--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html>
     <head>
         <title>Vibgyor High School</title>
-        <style>
-            h1 {text-align: center;}
-            h1 {color :rgb(9, 24, 65);}
-            body {
-            background-image: url('school.jpg');
-            }
-        </style>
+        <link rel = "stylesheet" type = "text/css" href="style.css">
     </head>
     <body>
-        <a><img src="logo.png" width = 300 height = 100/></a>
+        <img src="logo.png" width = 300 height = 100/>
         <h1>Welcome to VIBGYOR High</h1>
         <h1><br>
             VIBGYOR at a glance : <br>
@@ -21,17 +15,18 @@
         </h1>
         <br><br><br><br><br><br><br><br>
         <h2>To know more, click on the following links : </h2>
+        <div class = "links">
         <a href = "Home.html">Home</a>
-        <p></p>
         <a href = "AboutUs.html">About Us</a>
-        <p></p>
         <a href = "Events.html">Events</a>
-        <p></p>
         <a href = "MyExperience.html">My Experience</a>
+        </div>
         <br>
         <br>
+        <div class="footer">
         <a href="#"><img src="fb.png" width = 50 height = 50/></a>
         <a href="#"><img src="insta.png" width = 50 height = 50/></a>
         <a href="#"><img src="youtube.png" width = 50 height = 50/></a>
+        </div>
     </body>
 </html>
