--- a/MyExperience.html
+++ b/MyExperience.html
@@ -3,17 +3,19 @@
     <head>
         <title>Vibgyor High School</title>
         <style>
-            body {
-            background-color:peachpuff;
-        }
-        h1 {
-            border-top-style: solid;
-            border-top-color:blue;
-        }
-
+            h1 {
+                    border-top-style: solid;
+                    border-top-color:blue
+                }
         </style>
     </head>
-    <body>
-        <a href = "index.html">Back</a>
-    </body>
+        <body>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <h1>Parent Review ... </h1>
+                <p>
+                    <B>VIBGYOR High School Parent Review : </B>
+                </p>
+                <br>
+                <a href = "index.html">Back</a>
+            </body>
 </html>
